# ad_progression_pipeline

./: .gitignore  .pre-commit-config.yaml  README  README.md  README2  constants.py  pyproject.toml  scratch.ipynb  scratch_8.26.ipynb  todo
ad_progression_pipeline/: constants.py  main.py
ad_progression_pipeline/components/feature_selectors/: flows.py
ad_progression_pipeline/components/feature_selectors/tasks/: lasso.py  supervised_encoder.py
ad_progression_pipeline/components/imputation/: flows.py
ad_progression_pipeline/components/imputation/tasks/: imputation.py
ad_progression_pipeline/components/ingestion/: flows.py
ad_progression_pipeline/components/ingestion/tasks/: column_transformers.py  reshapers.py
ad_progression_pipeline/components/models/: __init__.py  model_interface.py  rebalancing_random_forest.py  rebalancing_xg_boost.py  rnn.py
ad_progression_pipeline/components/models/tasks/: rebalancing_random_forest.py  serialize_metrics.py
ad_progression_pipeline/flows/: random_forest.py
ad_progression_pipeline/imputation/: imputation.py
ad_progression_pipeline/ingestion/: ingestion.py
ad_progression_pipeline/models/: rnn.py
ad_progression_pipeline/parameters/: parameters.py
ad_progression_pipeline/pipeline/end_to_end/: train.py
ad_progression_pipeline/pipeline/end_to_end/training/: categorical_trainer.py  random_forest.py
ad_progression_pipeline/pipeline/helpers/: cli.py  context_handler.py  data.py  file_handler.py  files.py  optuna_handler.py
ad_progression_pipeline/utils/: constants.py  prefect.py
data/dataset/: test_set.csv
data/optuna_runs/RandomForest_09-02 11-57/: best_model_metrics.pkl  study.db
data/optuna_runs/RandomForest_09-05 15-02/: study.db
data/optuna_runs/RandomForest_09-05 16-01/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 14-29/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 14-36/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 14-43/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 14-53/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 14-59/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 15-33/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 15-37/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 15-50/: study.db
data/optuna_runs/RebalancingRandomForest_09-06 15-57/: best_model_metrics.pkl  study.db
data/pipeline_results/train/RNN_09-08 01-14/: study.db
data/pipeline_results/train/RNN_09-08 01-22/: study.db
data/pipeline_results/train/RNN_09-08 01-40/: study.db
data/pipeline_results/train/RNN_09-08 01-46/: study.db
data/pipeline_results/train/RNN_09-08 01-51/: study.db
data/pipeline_results/train/RNN_09-08 01-58/: study.db
data/pipeline_results/train/RNN_09-08 02-26/: study.db
data/pipeline_results/train/RNN_09-08 02-30/: study.db
data/pipeline_results/train/RNN_09-08 02-49/: study.db
data/pipeline_results/train/RNN_09-08 02-55/: study.db
data/pipeline_results/train/RNN_09-08 03-10/: study.db
data/pipeline_results/train/RNN_09-08 03-13/: study.db
data/pipeline_results/train/RNN_09-08 03-17/: study.db
data/pipeline_results/train/RNN_09-08 03-22/: study.db
data/pipeline_results/train/RNN_09-08 03-24/: study.db
data/pipeline_results/train/RNN_09-08 03-27/: study.db
data/pipeline_results/train/RNN_09-08 03-30/: study.db
data/pipeline_results/train/RNN_09-08 03-33/: study.db
data/pipeline_results/train/RNN_09-08 03-38/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-07 23-03/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-07 23-06/: best_model_metrics.md  study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-00/: best_model_metrics.md  study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-11/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-12/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-15/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-19/: study.db
data/pipeline_results/train/RebalancingRandomForest_09-08 00-20/: study.db
ingestion/: __init__.py  ingestion.py
models/: rnn.py
obsolete/: feature_details.xlsx  flattened_3.csv  seven_visits_test_new.csv
parameters/: parameters.py
pipeline_config/: RandomForest.yaml
pipelines/: random_forest.py
sample_configs/training/: RNN.yaml  RandomForest.yaml  XGBoost.yaml
scratch/: Aim 1 2.29.24-Copy1.ipynb  RNN_pipeline.ipynb  data_questions.txt  prefect_inspect.ipynb  scratch.ipynb  scratch_8.26.ipynb
(+6 files in other folders)
